--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL = https://my-json-server.typicode.com/SE331-2023-project1/project01-wait-we-have-project
+VITE_BACKEND_URL=http://52.90.114.17:8100/
+VITE_UPLOAD_URL=http://52.90.114.17:8100/uploadImage
