--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_BACKEND_URL=http://52.90.114.17:8100/
-VITE_UPLOAD_URL=http://52.90.114.17:8100/uploadImage
+VITE_BACKEND_URL=http://54.91.55.126:8100/
+VITE_UPLOAD_URL=http://54.91.55.126:8100/uploadImage
+VITE_UPLOAD_URL=http://54.91.55.126:8100/uploadFile
