--- a/.github/workflows/aws-docker-hosting-merge.yml
+++ b/.github/workflows/aws-docker-hosting-merge.yml
@@ -23,7 +23,7 @@ jobs:
               with:
                   context: .
                   push: true
-                  tags: ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-project:latest
+                  tags: ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-test:latest
     deploy:
         runs-on: ubuntu-latest
         needs: docker
